Added the clear button and rearranged the button layout

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
             <button onclick="appearInDisplay('+')">+</button>
             <button onclick="appearInDisplay('.')">.</button>
             <button onclick="appearInDisplay('0')">0</button>
-            <button onclick="appearInDisplay('=')">=</button>
             <button onclick="appearInDisplay('-')">-</button>
+            <button onclick="calculate()">=</button>
+            <button onclick="clearDisplay()">A/C</button>
+            
 
 
            
