--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <div id="calculator">
         <input id="display" type="text" readonly>
-        <div class="buttons">
+        <div class="button-keys">
             <button onclick="appearInDisplay('7')">7</button>
             <button onclick="appearInDisplay('8')">8</button>
             <button onclick="appearInDisplay('9')">9</button>
