--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <input id="display" type="text" readonly>
         <div class="button-keys">
             <button onclick="clearDisplay()" id="clear" id>A/C</button>
-            <button onclick="negativeNum()">+/-</button>
-            <button onclick="negativeNum()">+/-</button>
+            <button id="special" onclick="negativeNum()">+/-</button>
+            <button onclick="makeDecimal()" id="special">%</button>
             <button onclick="appearInDisplay('*')" id="operant">*</button>
 
             <button onclick="appearInDisplay('7')">7</button>
