--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <link rel="stylesheet" href="styles.css" />
+    <h1>Simple Calculator</h1>
     <div id="calculator">
       <input id="display" type="text" readonly />
       <div class="button-keys">
